--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.4",
+    "@hookform/resolvers": "^3.6.0",
     "clsx": "^2.1.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-hook-form": "^7.52.0",
+    "react-icons": "^5.2.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
