--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@headlessui/react": "^2.0.4",
     "@hookform/resolvers": "^3.6.0",
-    "clsx": "^2.1.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "yup": "^1.4.0"
   },
